Fix some UI bugs (#400)
* stop storing fullscreenElement in redux store

* if username is too long, dont overflow sidebar and truncate username

* dont allow titles to overflow past 60ch in the media pages, wrap them if they do, fix positioning of the dropdown

--- a/ui/src/Pages/Media/Dropdown.scss
+++ b/ui/src/Pages/Media/Dropdown.scss
@@ -50,7 +50,7 @@
     flex-direction: column;
     background: var(--secondaryColor);
     position: absolute;
-    top: 100%;
+    top: 2em;
     right: 0;
     white-space: nowrap;
     z-index: 1;
